@@ -236,19 +236,20 @@ usage(void)
 }
 
 /*
- * Display package version & repository version of this program.
+ * Display package version of this program.
  */
 static void
 displayversion(void)
 {
 
-  printf("%s  %s \n", getprogname(), PACKAGE_VERSION);
+  printf("%s  %s ", getprogname(), PACKAGE_VERSION);
 
   /* Check verbose flag for displaying gmime version */
   if(gverbose_flag) {
-    printf("Using gmime version %d.%d.%d\n",
+    printf("Using gmime version %d.%d.%d",
            gmime_major_version, gmime_minor_version, gmime_micro_version);
   }
+  printf("\n");
 }
 
 /*
@@ -259,7 +260,7 @@ static void
 displayconfig(cfg_t *cfg)
 {
 
-  printf("Using this config:\n");
+  printf("%s: Using this config:\n", getprogname());
 
   if(cfg->mycall) {
     printf("  My callsign: %s\n", cfg->mycall);
