@@ -343,7 +343,7 @@ main(int argc, char *argv[])
         printf("ADDLF 0\n");
         fprintf(fp, "ARX 0\r");       /* Amtor Phasing disabled */
         printf("ARX 0\n");
-        fprintf(fp, "BCs 0\r");       /* FEC reception is disabled */
+        fprintf(fp, "BC 0\r");        /* FEC reception is disabled */
         printf("BC 0\n");
         fprintf(fp, "BKCHR 2\r");     /* Breakin Char = 2*/
         printf("BKCHR 2\n");
@@ -444,7 +444,7 @@ usage(void)
 }
 
 /*
- * Display package version & repository version of this program.
+ * Display package version of this program.
  */
 static void
 displayversion(void)
@@ -454,9 +454,10 @@ displayversion(void)
 
   /* Check verbose flag for displaying gmime version */
   if(gverbose_flag) {
-    printf("Using gmime version %d.%d.%d\n",
+    printf("Using gmime version %d.%d.%d",
            gmime_major_version, gmime_minor_version, gmime_micro_version);
   }
+  printf("\n");
 }
 
 /*
@@ -470,7 +471,7 @@ displayconfig(cfg_t *cfg)
   struct baudrate const *bp;
   struct modemtype const *mp;
 
-  printf("Using this config:\n");
+  printf("%s: Using this config:\n", getprogname());
 
   if(cfg->mycall) {
     printf("  My callsign: %s\n", cfg->mycall);
